--- a/apps/crowdfunder/htdocs/main.css
+++ b/apps/crowdfunder/htdocs/main.css
@@ -704,3 +704,56 @@ img {
 .badge-primary {
     background-color: #3a87ad;
 }
+
+#crowdfunder-summary {
+    padding: 50px 0;
+    text-align: center;
+    background-color: #B95E0D;
+    color: #FFFFFF;
+}
+
+.overlay {
+    background: rgba(03,03,03,0.6);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+}
+
+#home {
+    background-image: url(banner.png);
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 400px;
+    text-align: center;
+    align-items: center;
+    vertical-align: middle;
+    display: flex;
+}
+
+#home h1 {
+    margin-bottom: 50px;
+    font-size: 5em;
+    font-weight: 700;
+    letter-spacing: 15px;
+    color: #ececec;
+    text-transform: uppercase;
+}
+
+#projects-summary {
+    padding: 20px 0;
+    background-color: #e0e0e0;
+    text-align: center;
+}
+
+#crowdfunder-summary h1 {
+    font-size: 3em;
+    font-weight: 700;
+    letter-spacing: 5px;
+    color: #ececec;
+}
+
+#crowdfunder-summary #counters > div > span {
+    font-size: 1.5em;
+}
